--- a/style.css
+++ b/style.css
@@ -14,9 +14,143 @@ font-family: 'Playfair Display', serif; */
 
 body {
     font-size: 100%;
-    background: linear-gradient(68.15deg, #aa6089 16.62%, #fdcaec 85.61%);
+    background-color: #fff0f3;
+    overflow-x: hidden; 
 }
+
 .cabecalho {
-    display: grid;
-    
+    margin-bottom: 50px;
+    border-bottom: solid 2px #fcd3d3;
+}
+
+.logo {
+    display: inline-block;
+    height: 180px;
+    cursor: pointer;
+}
+
+.cabecalho-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+.decoracao {
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: top;
+    justify-content: space-between;
+}
+
+
+.menu {
+    display: inline-block;
+    font-family: 'Righteous', cursive;
+    font-size: 22px;
+    font-weight: 100;
+    color: #EA5555;
+    cursor: pointer;
+}
+
+.menu a {
+    margin-left: 50px;
+    color: inherit
+}
+.menu a:hover {
+    border-bottom: 2px solid #faa4a4;
+    color: #faa4a4;
+}
+
+.input-pesquisar {
+    background-image: url('icones/loupe.png');
+    background-repeat: no-repeat;
+    background-position: 85%;
+    background-color: #fcd3d3;
+    width: 150px;
+    height: 35px;
+    border: none;
+    outline: 0;
+    border-radius: 15px;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    padding-left: 10px;
+    color:#EA5555;
+}
+
+input::placeholder {
+    color:#EA5555;
+}
+
+.conteudo-1 {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+    font-family: 'Sarala', sans-serif;
+    font-size: 12px;
+    border-bottom: solid 2px #fcd3d3;
+}
+
+.primeiraParte > .titulo {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    font-size: 40px;
+    color: #EA5555;
+    margin: 20px;
+}
+
+.primeiraParte {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    margin: 40px;
+}
+
+.primeiraParte > button {
+    background-color: #EA5555;
+    border: none;
+    box-shadow: 1px 1px 5px rgb(37, 37, 37);
+    height: 30px;
+    width: 30px;
+    border-radius: 100px;
+    margin-top: 20px;
+}
+
+.primeiraParte > button:active {
+    box-shadow: none;
+}
+
+.seta {
+    height: 10px;
+    width: 20px;
+    padding: 1px;
+}
+
+.segundaParte {
+    display: none;
+}
+
+.conteudo-1 .fundo {
+    display: block;
+    height: 400px;
+    position: absolute;
+    margin-left: 400px;
+}
+
+
+.conteudo-1 .mulher {
+    display: block;
+    position: relative;
+    height: 400px;
+    position: relative;
+}
+
+.linha {
+    height: 100px;
+    margin: 0;
 }
