--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
 
 .cabecalho {
     margin-bottom: 50px;
-    border-bottom: solid 2px #fcd3d3;
 }
 
 .logo {
@@ -33,7 +32,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 
@@ -69,16 +68,16 @@ body {
     background-repeat: no-repeat;
     background-position: 85%;
     background-color: #fcd3d3;
-    width: 180px;
-    height: 35px;
+    width: 350px;
+    height: 45px;
     border: none;
     outline: 0;
     border-radius: 15px;
     font-family: 'Sarala', sans-serif;
     font-weight: 400;
-    font-size: 15px;
-    padding-left: 10px;
-    padding-right: 45px;
+    font-size: 16px;
+    padding-left: 20px;
+    padding-right: 65px;
     color:#EA5555;
 }
 
@@ -89,11 +88,10 @@ input::placeholder {
 .conteudo-1 {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-around;
+    align-items: flex-end;
+    justify-content: space-evenly;
     font-family: 'Sarala', sans-serif;
-    font-size: 12px;
-    border-bottom: solid 2px #fcd3d3;
+    font-size: 16px;
 }
 
 .primeiraParte > .titulo {
@@ -138,19 +136,22 @@ input::placeholder {
 }
 
 .conteudo-1 .fundo {
-    display: block;
-    height: 470px;
+    display: inline-block;
+    height: 700px;
     position: absolute;
-    margin-left: 600px;
+    margin-left: 800px;
+    margin-top: 60px;
 }
 
 
 .conteudo-1 .mulher {
-    display: block;
+    display: inline-block;
     position: relative;
-    height: 400px;
-    position: relative;
+    height: 600px;
+    margin-left: 120px;
+    margin-top: 100px;
 }
+
 
 .conteudo-2 {
     display: flex;
@@ -158,7 +159,7 @@ input::placeholder {
     align-items: flex-start;
     justify-content: space-around;
     font-family: 'Sarala', sans-serif;
-    font-size: 12px;
+    font-size: 16px;
     margin-top: 100px;
 }
 
@@ -185,20 +186,20 @@ input::placeholder {
 
 .conteudo-2 > .fundo {
     display: block;
-    height: 450px;
+    height: 700px;
     position: absolute;
-    margin-left: 400px;
-    margin-top: 180px;
+    margin-left: 700px;
+    margin-top: 200px;
 }
 
 .container {
     display: grid;
     height: 150px;
     padding: 15px;
-    grid-template-columns: 180px 180px;
+    grid-template-columns: 200px 200px;
     grid-template-rows: 50px 50px;
     position: relative;
-    gap: 20px 40px;
+    gap: 25px 40px;
     margin: 150px;
 }
 
@@ -237,5 +238,53 @@ input::placeholder {
 
 
 .linha {
-    height: 200px;
+    height: 400px;
+}
+
+.rodape {
+    background-color: #ea5555;
+    color: white;
+    font-family: 'Playfair Display', serif;
+    font-size: 16px;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.rodape .flores {
+    height: 100px;
+}
+
+.menuRodape {
+    width: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    align-content: center;
+}
+
+.instagram {
+    height: 25px;
+}
+
+.email {
+    height: 28px;
+}
+
+.telefone {
+    height: 25px;
+}
+
+.menuRodape > .contat {
+    margin-left: 30px;
+}
+
+.menuRodape, .itemRodape {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 12px;
+    gap: 10px;
 }
