--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-/* font-family: 'Righteous', cursive;
-font-family: 'Sarala', sans-serif; 
-font-family: 'Playfair Display', serif; */
 
 * {
     margin: 0;
@@ -88,7 +85,7 @@ input::placeholder {
 .conteudo-1 {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: space-evenly;
     font-family: 'Sarala', sans-serif;
     font-size: 16px;
@@ -136,7 +133,7 @@ input::placeholder {
 }
 
 .conteudo-1 .fundo {
-    display: inline-block;
+    display: block;
     height: 700px;
     position: absolute;
     margin-left: 800px;
@@ -145,7 +142,7 @@ input::placeholder {
 
 
 .conteudo-1 .mulher {
-    display: inline-block;
+    display: block;
     position: relative;
     height: 600px;
     margin-left: 120px;
@@ -160,7 +157,6 @@ input::placeholder {
     justify-content: space-evenly;
     font-family: 'Sarala', sans-serif;
     font-size: 16px;
-    margin-top: 100px;
     height: 600px;
 }
 
@@ -182,7 +178,7 @@ input::placeholder {
 }
 
 .texto > .linha {
-    margin-right: 160px;
+    margin-right: 250px;
 }
 
 .conteudo-2 > .fundo {
@@ -286,33 +282,16 @@ input::placeholder {
     gap: 10px;
 }
 
-/*
-   @media (max-width: 600px) {
-            .muito-pequeno { display: block; }
-        }
-
-        @media (max-width: 1000px), (orientation: portrait) {
-            .pequeno-retrato { display: block; }
-        }
-
-        @media (min-width: 500px) and (max-width: 1000px) {
-            .intervalo { display: block; }
-        }
-*/
-
 @media (max-width: 800px) {
-    .logo { height: 80px;
-    margin-left: 10px;}
+    .logo { height: 80px; margin-left: 10px;}
     .decoracao {height: 50px;}
     .input-pesquisar {display: none;}
-    .menu {font-size: 16px; flex-direction: column;}
+    .menu {font-size: 16px;}
     .conteudo-1 .fundo { display: none;}
     .conteudo-1 .mulher { display: none;}
     .conteudo-2 .fundo {display: none;}
+    .texto { margin-right: 80px;}
     .container {display: none;}
-    .conteudo-2 {flex-direction: column;}
-    .texto {margin-top: 300px;}
-    .linha {height: 128px;}
     .menuRodape {font-size: 10px; height: 40px;}
     .rodape .flores {display: none;}
     .instagram { height: 15px;}
